--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,17 @@
 <h1>Start A New Game</h1>
-# Find me in app/views/games/show.html.erb
 
-<%= form_for @game do |f| %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<div class="board">
+  <table>
+    <tbody>
+      <% (1..8).each do |y_coord| %>
+        <tr id = <%= y_coord %>>
+          <% (1..8).each do |x_coord| %>
+            <td data-x-coord = <%= x_coord %> data-y-coord = <%= y_coord %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white-square droppable-square" : "black-square droppable-square")}" %> >
+            
+            </td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
