--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Games#index</h1>
-<p>Find me in app/views/games/index.html.erb</p>
+
+
+<!-- UNMATCHED GAMES -->
+    <div class="section">
+      <h1 class="text-center space">Join A Match</h1>
+        <div class="row matches" >
+          <% if @unmatched_games.any? %>
+            <% @unmatched_games.each do |game| %>
+              <div class="row indexgame">
+                <span class="column">
+                <h5 class="text-center"><%= "Game #{game.id}" %></h5>
+                  <% if game.white_player_user_id.blank? %>
+                    <%= simple_form_for game, url: join_game_path(game) do |f| %>
+                      <h6 class="text-center"><%= "Opponent: #{game.black_player.username}" %></h6></span>
+                        <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                        <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+                      <span class="column turn"><%= f.submit "Join as white player", class: "btn btn-secondary" %></span>
+                    <% end %>
+                  <% end %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+    </div>    
