--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,7 +7,8 @@
         <tr id = <%= y_coord %>>
           <% (1..8).each do |x_coord| %>
             <td data-x-coord = <%= x_coord %> data-y-coord = <%= y_coord %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white-square droppable-square" : "black-square droppable-square")}" %> >
-            
+            <% if gamepiece = @pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first %>
+              <span><%= image_tag gamepiece.image, class: "#{gamepiece.name} selectable-piece", id: gamepiece.id %></span>
             </td>
           <% end %>
         </tr>
